fix about description title alignment

--- a/src/styling/about-us/aboutdescription.css
+++ b/src/styling/about-us/aboutdescription.css
@@ -60,7 +60,8 @@
   }
 
   #aboutdescription-title {
-    margin-left: 63%;
+    margin-right: 2%;
+    text-align: right;
   }
 }
 
